--- a/common/footer.css
+++ b/common/footer.css
@@ -1,4 +1,15 @@
-.footer {
+.footer .box {
+  
+ padding: 2em;
+ color: white;
+ background:hsla(197, 100%, 35%, 1);
+}
+.footer .box:first-child {
+     color: hsla(0, 0%, 17%, 1);
+ background: hsla(58, 100%, 53%, 1)
+}
+
+.main-footer {
  padding: 2em;
  background:black;
  color: white;
