--- a/common/Header.css
+++ b/common/Header.css
@@ -15,3 +15,13 @@
  background-repeat: no-repeat;
  background-size: cover;
 }
+a {
+  text-decoration: none;
+  color: white;
+  text-shadow: 2px 2px 2px black;
+  transition: all 1.5s ease;
+}
+a:hover{
+  color: black;
+  text-shadow: 2px 2px 2px white;
+}
